# cmd/medication-api-service/main.go
@@ -8,6 +8,11 @@ import (
 	"github.com/MatveevaLI/medication-management-webapi/api"
 	"github.com/MatveevaLI/medication-management-webapi/internal/medication"
 	"github.com/gin-gonic/gin"
+
+	"github.com/MatveevaLI/medication-management-webapi/internal/db_service"
+	"context"
+    "time"
+    "github.com/gin-contrib/cors"
 )
 
 func main() {
@@ -22,6 +27,24 @@ func main() {
 	}
 	engine := gin.New()
 	engine.Use(gin.Recovery())
+	corsMiddleware := cors.New(cors.Config{
+		AllowOrigins:     []string{"*"},
+		AllowMethods:     []string{"GET", "PUT", "POST", "DELETE", "PATCH"},
+		AllowHeaders:     []string{"Origin", "Authorization", "Content-Type"},
+		ExposeHeaders:    []string{""},
+		AllowCredentials: false,
+		MaxAge:           12 * time.Hour,
+	})
+	engine.Use(corsMiddleware)
+
+	// setup context update  middleware
+	dbService := db_service.NewMongoService[medication.Ambulance](db_service.MongoServiceConfig{})
+	defer dbService.Disconnect(context.Background())
+	engine.Use(func(ctx *gin.Context) {
+		ctx.Set("db_service", dbService)
+		ctx.Next()
+	})
+	
 	// request routings
 	medication.AddRoutes(engine)
 	engine.GET("/openapi", api.HandleOpenApi)
